Clean up some flex code